<resources>
    <string name="app_name">CodeTest</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_share">Share</string>
    <!-- Strings used for fragments for navigation -->
    <string name="sale_fragment_label">Sale: Up to 50% Off*</string>
    <string name="detail_fragment_label">Detail Fragment</string>
    <string name="zoom_image_fragment_label">Zoom Image Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lbl_internal_error">Internal error.</string>
    <string name="lbl_no_internet_connection">No internet connection.</string>
    <string name="lbl_error_400">Error 400.</string>
    <string name="lbl_error_401">Error 401.</string>
    <string name="lbl_client_code_error">Client logic code error.</string>
    <string name="lbl_connection_time_out">Connection time out</string>

    <string name="lbl_item_count">%s items</string>
    <string name="lbl_sort">Sort</string>
    <string name="lbl_filter">Filter</string>
    <string name="lbl_discount_rate">(-%s)</string>

    <string name="lbl_description_title">Description</string>
    <string name="lbl_function">Function:</string>
    <string name="lbl_function_dummy">Hydrate, Long-wearing, Smoothen</string>
    <string name="lbl_skin_type">Skin Type:</string>
    <string name="lbl_skin_type_dummy">Combination, Dry, Normal, Oily</string>
    <string name="lbl_finish">Finish:</string>
    <string name="lbl_finish_dummy">Natural</string>
    <string name="lbl_formulation">Formulation:</string>
    <string name="lbl_formulation_dummy">Liquid</string>

    <string name="lbl_what_it_is">What it is:</string>
    <string name="lbl_what_it_does">What it does:</string>
    <string name="lbl_add_to_bag">Add to bag</string>
    <string name="lbl_reviews_count">%s Reviews</string>

    <string name="lbl_choose_count">Choose Count</string>
</resources>
