<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/sale_fragment">

    <fragment
        android:id="@+id/sale_fragment"
        android:name="com.kyawhut.codetest.ui.sale.SaleFragment"
        android:label="@string/sale_fragment_label"
        tools:layout="@layout/fragment_sale">

        <action
            android:id="@+id/action_SaleFragment_to_DetailFragment"
            app:destination="@id/detail_fragment" />
    </fragment>
    <fragment
        android:id="@+id/detail_fragment"
        android:name="com.kyawhut.codetest.ui.detail.DetailFragment"
        android:label="@string/detail_fragment_label"
        tools:layout="@layout/fragment_detail">

        <argument
            android:name="product_model"
            app:argType="com.kyawhut.codetest.data.model.ProductModel" />

        <action
            android:id="@+id/action_DetailFragment_to_SaleFragment"
            app:destination="@id/sale_fragment" />
        <action
            android:id="@+id/detail_to_zoom_image"
            app:destination="@id/zoom_image_fragment" />
    </fragment>
    <fragment
        android:id="@+id/zoom_image_fragment"
        android:name="com.kyawhut.codetest.ui.zoom.ZoomImageFragment"
        android:label="@string/zoom_image_fragment_label"
        tools:layout="@layout/fragment_zoom_image">
        <argument
            android:name="zoom_image_list"
            app:argType="string[]" />
        <argument
            android:name="category_image_list"
            app:argType="string[]" />
        <argument
            android:name="brand_name"
            app:argType="string" />
        <argument
            android:name="selected_index"
            app:argType="integer" />
    </fragment>
</navigation>