<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View.OnClickListener" />

        <import type="com.kyawhut.codetest.ui.detail.DetailViewModel" />

        <import type="com.kyawhut.codetest.rv.adapter.CategoryImageAdapter" />

        <import type="com.kyawhut.codetest.utils.binding.ViewBindingUtils.LayoutType" />

        <variable
            name="onClickListener"
            type="OnClickListener" />

        <variable
            name="vm"
            type="DetailViewModel" />

        <variable
            name="isFavorite"
            type="Boolean" />

        <variable
            name="categoryAdapter"
            type="CategoryImageAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.DetailFragment">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/view_scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingBottom="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.kyawhut.codetest.ui.component.ComponentCarousel
                    android:id="@+id/view_carousel"
                    carouselItem="@{vm.productModel.productCarouselList}"
                    android:layout_width="0dp"
                    android:layout_height="350dp"
                    app:autoSlide="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:sliderMilli="5000" />

                <ImageView
                    android:id="@+id/action_zoom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_detail_action"
                    android:onClick="@{(v) -> onClickListener.onClick(v)}"
                    android:padding="@dimen/margin_medium_2"
                    app:layout_constraintBottom_toBottomOf="@+id/view_carousel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/ic_zoom" />

                <ImageView
                    android:id="@+id/action_add_to_fav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_detail_action"
                    android:onClick="@{(v) -> onClickListener.onClick(v)}"
                    android:padding="@dimen/margin_medium_2"
                    android:src="@{isFavorite ? @drawable/ic_remove_from_fav : @drawable/ic_add_to_fav}"
                    app:layout_constraintBottom_toBottomOf="@+id/view_carousel"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:src="@drawable/ic_add_to_fav" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_image"
                    adapter="@{categoryAdapter}"
                    layoutManger="@{LayoutType.HORIZONTAL_LAYOUT}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_carousel"
                    tools:itemCount="4"
                    tools:listitem="@layout/card_image" />

                <TextView
                    android:id="@+id/tv_brand_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/margin_medium_2"
                    android:text="@{vm.productModel.productBrandName}"
                    android:textColor="?textColor"
                    android:textSize="@dimen/text_regular_2x"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_image"
                    tools:text="Product Name" />

                <TextView
                    android:id="@+id/tv_product_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/margin_medium_2"
                    android:text="@{vm.productModel.productName}"
                    android:textColor="?textColor"
                    android:textSize="@dimen/text_regular_2x"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_brand_name"
                    tools:text="Brand Name" />

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/item_rating"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rating="@{vm.productModel.productRate}"
                    android:theme="@style/ItemRating"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_rate_count"
                    app:layout_constraintEnd_toStartOf="@+id/tv_rate_count"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_rate_count"
                    tools:rating="3.5" />

                <TextView
                    android:id="@+id/tv_rate_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:background="@drawable/bg_rate_count"
                    android:gravity="center"
                    android:text="@{String.format(@string/lbl_reviews_count, vm.productModel.productReviewCount)}"
                    android:textColor="?textColor"
                    android:textSize="@dimen/text_regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/item_rating"
                    app:layout_constraintTop_toBottomOf="@+id/tv_product_name"
                    tools:text="302 Reviews" />

                <TextView
                    android:id="@+id/tv_original_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:background="@drawable/bg_txt_strike"
                    android:text="@{vm.productModel.productOriginalPrice}"
                    android:textColor="?textColor"
                    android:textSize="@dimen/text_regular_2x"
                    app:layout_constraintEnd_toStartOf="@+id/tv_discount_price"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_rate_count"
                    tools:text="$3,300" />

                <TextView
                    android:id="@+id/tv_discount_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/margin_medium"
                    android:paddingEnd="@dimen/margin_small"
                    android:text="@{vm.productModel.productDiscountPrice}"
                    android:textColor="?textColor"
                    android:textSize="@dimen/text_regular_2x"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/tv_discount_rate"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_original_price"
                    app:layout_constraintTop_toTopOf="@+id/tv_original_price"
                    tools:text="$3,300" />

                <TextView
                    android:id="@+id/tv_discount_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:paddingHorizontal="@dimen/margin_small"
                    android:text="@{String.format(@string/lbl_discount_rate, vm.productModel.productDiscountRate)}"
                    android:textColor="?textColor"
                    android:textSize="@dimen/text_regular_2x"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_discount_price"
                    app:layout_constraintTop_toTopOf="@+id/tv_original_price"
                    tools:text="(-20%)" />

                <TextView
                    android:id="@+id/tv_description_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_medium_2"
                    android:text="@string/lbl_description_title"
                    android:textAllCaps="true"
                    android:textColor="?textColor"
                    android:textSize="@dimen/text_regular_2x"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_original_price" />

                <TextView
                    android:id="@+id/tv_function"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/margin_medium_2"
                    android:text="@string/lbl_function"
                    android:textColor="?textColor"
                    android:textSize="@dimen/text_regular_2x"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_description_title" />

                <TextView
                    android:id="@+id/tv_skin_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/margin_medium_2"
                    android:paddingVertical="@dimen/margin_small"
                    android:text="@string/lbl_skin_type"
                    android:textColor="?textColor"
                    android:textSize="@dimen/text_regular_2x"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_function" />

                <TextView
                    android:id="@+id/tv_finish"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/margin_medium_2"
                    android:paddingBottom="@dimen/margin_small"
                    android:text="@string/lbl_finish"
                    android:textColor="?textColor"
                    android:textSize="@dimen/text_regular_2x"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_skin_type" />

                <TextView
                    android:id="@+id/tv_formulation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/margin_medium_2"
                    android:text="@string/lbl_formulation"
                    android:textColor="?textColor"
                    android:textSize="@dimen/text_regular_2x"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_finish" />

                <TextView
                    android:id="@+id/tv_what_it_is_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_medium_2"
                    android:text="@string/lbl_what_it_is"
                    android:textColor="?textColor"
                    android:textSize="@dimen/text_regular_2x"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_formulation" />

                <TextView
                    android:id="@+id/tv_what_it_is"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_medium_2"
                    android:text="@string/lbl_what_it_is"
                    android:textColor="?textColor"
                    android:textSize="@dimen/text_regular_2x"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_what_it_is_title" />

                <TextView
                    android:id="@+id/tv_what_it_does_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_medium_2"
                    android:text="@string/lbl_what_it_does"
                    android:textColor="?textColor"
                    android:textSize="@dimen/text_regular_2x"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_what_it_is" />

                <TextView
                    android:id="@+id/tv_what_it_does"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_medium_2"
                    android:text="@string/lbl_what_it_does"
                    android:textColor="?textColor"
                    android:textSize="@dimen/text_regular_2x"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_what_it_does_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/view_add_to_bag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:layout_marginBottom="@dimen/margin_medium_2"
            app:cardCornerRadius="@dimen/margin_small"
            app:cardElevation="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">

                <TextView
                    android:id="@+id/action_order_count"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="?selectableItemBackground"
                    android:drawablePadding="@dimen/margin_medium"
                    android:gravity="center"
                    android:onClick="@{(v) -> onClickListener.onClick(v)}"
                    android:paddingHorizontal="@dimen/margin_medium_2"
                    android:text="@{vm.orderCount.toString()}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular_2x"
                    app:drawableEndCompat="@drawable/ic_count_drop_down"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="1" />

                <TextView
                    android:id="@+id/action_add_to_bag"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/bg_add_to_bag"
                    android:gravity="center"
                    android:onClick="@{(v) -> onClickListener.onClick(v)}"
                    android:text="@string/lbl_add_to_bag"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_regular_2x"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/action_order_count"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
